--- a/index.html
+++ b/index.html
@@ -65,282 +65,7 @@
             </div>
         </section>
         <section class="recipes-section">
-            <article>
-                <div>
-                    <img src="img/recipes/Recette01.jpg" alt="Recette 1" class="w-100">
-                </div>
-                <div class="container-lg">
-                    <div class="row">
-                        <h2 class="col">
-                            Limonade de Coco
-                        </h2>
-                    </div>
-                    <div class="row">
-                        <h3 class="col">
-                            Recette
-                        </h3>
-                    </div>
-                    <div class="row">
-                        <div class="col">
-                            Mettre les glaçons à votre goût dans le blender, Ajouter le lait  la crème de coco, le jus de 2 citrons et le sucre ensemble. Mixer jusqu'à obtenir la consistance désirée.
-                        </div>
-                    </div>
-                    <div class="row">
-                        <h3 class="col">
-                            Ingrédients
-                        </h3>
-                    </div>
-                    <div class="row ingredients-list">
-                        <div>
-                            <span>
-                                Lait de coco
-                            </span>
-                            <span>
-                                400ml
-                            </span>
-                        </div>
-                        <div>
-                            <span>
-                                Crème de coco
-                            </span>
-                            <span>
-                                4 cuillères
-                            </span>
-                        </div>
-                        <div>
-                            <span>
-                                Glaçons
-                            </span>
-                            <span>
-                                2
-                            </span>
-                        </div>
-                        <div>
-                            <span>
-                                Jus de citron
-                            </span>
-                            <span>
-                                2
-                            </span>
-                        </div>
-                        <div>
-                            <span>
-                                Sucre
-                            </span>
-                            <span>
-                                20g
-                            </span>
-                        </div>
-                    </div>
-                </div>
-            </article>
-            <article>
-                <div>
-                    <img src="img/recipes/Recette01.jpg" alt="Recette 1" class="w-100">
-                </div>
-                <div class="container-lg">
-                    <div class="row">
-                        <h2 class="col">
-                            Limonade de Coco
-                        </h2>
-                    </div>
-                    <div class="row">
-                        <h3 class="col">
-                            Recette
-                        </h3>
-                    </div>
-                    <div class="row">
-                        <div class="col">
-                            Mettre les glaçons à votre goût dans le blender, Ajouter le lait  la crème de coco, le jus de 2 citrons et le sucre ensemble. Mixer jusqu'à obtenir la consistance désirée.
-                        </div>
-                    </div>
-                    <div class="row">
-                        <h3 class="col">
-                            Ingrédients
-                        </h3>
-                    </div>
-                    <div class="row ingredients-list">
-                        <div>
-                            <span>
-                                Lait de coco
-                            </span>
-                            <span>
-                                400ml
-                            </span>
-                        </div>
-                        <div>
-                            <span>
-                                Crème de coco
-                            </span>
-                            <span>
-                                4 cuillères
-                            </span>
-                        </div>
-                        <div>
-                            <span>
-                                Glaçons
-                            </span>
-                            <span>
-                                2
-                            </span>
-                        </div>
-                        <div>
-                            <span>
-                                Jus de citron
-                            </span>
-                            <span>
-                                2
-                            </span>
-                        </div>
-                        <div>
-                            <span>
-                                Sucre
-                            </span>
-                            <span>
-                                20g
-                            </span>
-                        </div>
-                    </div>
-                </div>
-            </article>
-            <article>
-                <div>
-                    <img src="img/recipes/Recette01.jpg" alt="Recette 1" class="w-100">
-                </div>
-                <div class="container-lg">
-                    <div class="row">
-                        <h2 class="col">
-                            Limonade de Coco
-                        </h2>
-                    </div>
-                    <div class="row">
-                        <h3 class="col">
-                            Recette
-                        </h3>
-                    </div>
-                    <div class="row">
-                        <div class="col">
-                            Mettre les glaçons à votre goût dans le blender, Ajouter le lait  la crème de coco, le jus de 2 citrons et le sucre ensemble. Mixer jusqu'à obtenir la consistance désirée.
-                        </div>
-                    </div>
-                    <div class="row">
-                        <h3 class="col">
-                            Ingrédients
-                        </h3>
-                    </div>
-                    <div class="row ingredients-list">
-                        <div>
-                            <span>
-                                Lait de coco
-                            </span>
-                            <span>
-                                400ml
-                            </span>
-                        </div>
-                        <div>
-                            <span>
-                                Crème de coco
-                            </span>
-                            <span>
-                                4 cuillères
-                            </span>
-                        </div>
-                        <div>
-                            <span>
-                                Glaçons
-                            </span>
-                            <span>
-                                2
-                            </span>
-                        </div>
-                        <div>
-                            <span>
-                                Jus de citron
-                            </span>
-                            <span>
-                                2
-                            </span>
-                        </div>
-                        <div>
-                            <span>
-                                Sucre
-                            </span>
-                            <span>
-                                20g
-                            </span>
-                        </div>
-                    </div>
-                </div>
-            </article>
-            <article>
-                <div>
-                    <img src="img/recipes/Recette01.jpg" alt="Recette 1" class="w-100">
-                </div>
-                <div class="container-lg">
-                    <div class="row">
-                        <h2 class="col">
-                            Limonade de Coco
-                        </h2>
-                    </div>
-                    <div class="row">
-                        <h3 class="col">
-                            Recette
-                        </h3>
-                    </div>
-                    <div class="row">
-                        <div class="col">
-                            Mettre les glaçons à votre goût dans le blender, Ajouter le lait  la crème de coco, le jus de 2 citrons et le sucre ensemble. Mixer jusqu'à obtenir la consistance désirée.
-                        </div>
-                    </div>
-                    <div class="row">
-                        <h3 class="col">
-                            Ingrédients
-                        </h3>
-                    </div>
-                    <div class="row ingredients-list">
-                        <div>
-                            <span>
-                                Lait de coco
-                            </span>
-                            <span>
-                                400ml
-                            </span>
-                        </div>
-                        <div>
-                            <span>
-                                Crème de coco
-                            </span>
-                            <span>
-                                4 cuillères
-                            </span>
-                        </div>
-                        <div>
-                            <span>
-                                Glaçons
-                            </span>
-                            <span>
-                                2
-                            </span>
-                        </div>
-                        <div>
-                            <span>
-                                Jus de citron
-                            </span>
-                            <span>
-                                2
-                            </span>
-                        </div>
-                        <div>
-                            <span>
-                                Sucre
-                            </span>
-                            <span>
-                                20g
-                            </span>
-                        </div>
-                    </div>
-                </div>
-            </article>
+            
         </section>
     </main>
     <footer>
@@ -352,5 +77,8 @@
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+
+    <script src="js/recipes.js"></script>
+    <script src="js/scripts.js"></script>
   </body>
 </html>
