esthétique des tags

--- a/index copy.html
+++ b/index copy.html
@@ -42,8 +42,8 @@
     <main>
         <section class="filter-section">
             <div>
-                <div class="filter-slider" id="ingredients-slider" data-slide="up">
-                    <div onclick="toggleSlider('ingredients-slider')">
+                <div>
+                    <div class="filter-slider" id="ingredients-slider" data-slide="up">
                         <span>
                             Ingrédients
                         </span>
@@ -53,15 +53,11 @@
                         <input type="text" name="ingredient-search" id="ingredient-search">
                         <i class="fa-solid fa-magnifying-glass" style="color: #C6C6C6;"></i>
                     </div>
-                    <div id="tags-lists" class="tags-list">
-                        <ul id="selected-ingredients" class="selected-filter-list">
-                        </ul>
-                        <ul id="ingredients-slider-list" class="filter-list">
-                        </ul>
-                    </div>
+                    <ul id="ingredients-slider-list" class="ing-list">
+                    </ul>
                 </div>
-                <div class="filter-slider" id="appareils-slider" data-slide="up">
-                    <div onclick="toggleSlider('appareils-slider')">
+                <div>
+                    <div class="filter-slider" id="appareils-slider" data-slide="up">
                         <span>
                             Appareils
                         </span>
@@ -74,8 +70,8 @@
                     <ul id="appareils-slider-list">
                         <li data-display="true">Test</li><li data-display="true">Test</li><li data-display="true">Test</li><li data-display="true">Test</li></ul>
                 </div>
-                <div class="filter-slider" id="ustensils-slider" data-slide="up">
-                    <div onclick="toggleSlider('ustensils-slider')">
+                <div>
+                    <div class="filter-slider" id="ustensils-slider" data-slide="up">
                         <span>
                             Ustensiles
                         </span>
