conversion de la partie factory (manque search)

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                 <div class="filter-slider" id="ustensils-slider" data-slide="up">
                     <div onclick="toggleSlider('ustensils-slider')">
                         <span>
-                            Ustensils
+                            Ustensiles
                         </span>
                         <i class="fa-solid fa-chevron-down" style="color: #1b1b1b;"></i>
                     </div>
