--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <!-- Font Awesome -->
     <script src="https://kit.fontawesome.com/a18e5efe47.js" crossorigin="anonymous"></script>
 
-    <title>Hello, world!</title>
+    <title>Les Petits Plats</title>
   </head>
   <body>
     <header class="page-header">
